refactor: restructure project assets, implement SCSS architecture, and cleanup

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </footer>
     </div>
 
-    <script src="assets/script.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
