feat: Migración a Módulo 5 - POO, ES6+ y consumo de API
- Implementación de arquitectura POO con clases WeatherApp y ApiClient
- Integración con Open-Meteo API para datos meteorológicos en tiempo real
- Uso de módulos ES6 (import/export)
- Programación asíncrona con async/await y Promise.all()
- Características ES6+: arrow functions, template literals, destructuring
- Sistema de alertas climáticas (ola de calor, frío extremo, semana lluviosa)
- Cálculo dinámico de estadísticas desde datos de la API
- Manejo de errores con try/catch y mensajes en UI
- Archivado de app.js (Módulo 4) en assets/js/archive/
- Actualización completa del README.md con documentación de POO y API

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </footer>
     </div>
 
-    <script src="assets/js/app.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
 </body>
 
 </html>
